# wplace_opencv_autoclick

./: .gitignore  README.md  debug_detection.py  debug_yellow.py  hotkey_listener.py  main.py  pyproject.toml  screenshot_capture.py  square_detector.py
.github/workflows/: python-app.yml
tests/: test_square_detector.py
